added gulp for browserSync, sass, and updated readme

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "RM",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-watch": "^4.3.11"
   }
 }
